samples/_failures_safe/1761602216_7ee270_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76ed0939.c: In function ‘main’:
./samples/SAFE/__tmp_76ed0939.c:171:32: error: expected ‘)’ at end of input
  171 |         if (event == EVENT_DATA
      |            ~                   ^
      |                                )
./samples/SAFE/__tmp_76ed0939.c:171:9: error: expected declaration or statement at end of input
  171 |         if (event == EVENT_DATA
      |         ^~
./samples/SAFE/__tmp_76ed0939.c:171:9: error: expected declaration or statement at end of input
